--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,11 +18,16 @@ android {
         }
     }
 }
-
+apply plugin: 'com.neenbedankt.android-apt'
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile project(':bottom-navigation-bar')
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.android.support:support-v4:24.1.1'
+    compile files('src/main/libs/lite-http-3.0.0.jar')
+    compile files('src/main/libs/gson-2.3.jar')
+    compile 'nl.qbusict:cupboard:2.1.4'
+    compile 'com.jakewharton:butterknife:8.1.0'
+    apt 'com.jakewharton:butterknife-compiler:8.1.0'
 }
