完成出库，配料，部分产线功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ScanCamActivity">
+        </activity>
+        <activity android:name=".DistriScanCamActivity">
+        </activity>
+        <activity android:name=".ReloadingScanActivity">
+        </activity>
         <provider
             android:name=".DataBase.DataProvider"
             android:authorities="com.thingword.mam"
